--- a/_config.yml
+++ b/_config.yml
@@ -19,20 +19,23 @@ excerpt_separator: <!--more-->
 scholar:
   style: apa
   locale: en
- 
+
   sort_by: year
   order: descending
- 
+
   source: ./_bibliography
-  bibliography: personal.bib
-  bibliography_template: "{{reference}}"
- 
+  bibliography: 0000-0002-9904-6548.bib
+#  bibliography_template: "{{reference}}"
+  bibliography_template: bibtemplate
+
   replace_strings: true
   join_strings:    true
- 
-  details_dir:    bibliography
-  details_layout: bib_details.html
-  details_link:   Details
- 
+
+#  details_dir:    bibliography
+#  details_layout: bib_details.html
+#  details_link:   Details
+
   query: "@*"
 
+author:
+  orcid: 0000-0002-9904-6548
