--- a/_config.yml
+++ b/_config.yml
@@ -8,9 +8,6 @@ description: > # this means to ignore newlines until "baseurl:"
   My personal webpage about my work, archaeology and quantitative research
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "http://www.martinhinz.info" # the base hostname & protocol for your site
-twitter_username: martinusrihhi
-github_username:  MartinHinz
-academia_username:  MartinHinz
 
 # Build settings
 markdown: kramdown
@@ -39,3 +36,8 @@ scholar:
 
 author:
   orcid: 0000-0002-9904-6548
+  twitter_username: martinusrihhi
+  github_username:  MartinHinz
+  academia_username:  MartinHinz
+
+exclude: ['_site', '_bibliography']
