added google scholar to social list

--- a/_config.yml
+++ b/_config.yml
@@ -39,5 +39,6 @@ author:
   twitter_username: martinusrihhi
   github_username:  MartinHinz
   academia_username:  MartinHinz
+  google_scholar_user: 39MXg1EAAAAJ
 
 exclude: ['_site', '_bibliography']
