--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,11 +1,11 @@
 primary:
+  - title: About me
+    url: "/#about_me"
+  - title: Publications
+    url: "#publications"
   - title: Projects
     url: /projects/
-  - title: Publications
-    url: /publications/
   - title: Blog
     url: /blog/
   - title: Screencasts
     url: /screencasts/
-  - title: About
-    url: /
