added humanties commons to social list

--- a/_config.yml
+++ b/_config.yml
@@ -39,5 +39,6 @@ author:
   github_username:  MartinHinz
   academia_username:  MartinHinz
   google_scholar_user: 39MXg1EAAAAJ
+  humanities_commons_user: martinhinz
 
 exclude: ['_site', '_bibliography']
