--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,7 @@ jobs:
         HOST: ${{ secrets.HOST }}
         USERNAME: ${{ secrets.USERNAME }}
         PORT: ${{ secrets.PORT }}
-        PASSWORD: ${{ secrets.PASSWORD }}
+        KEY: ${{ secrets.KEY }}
       with:
-        source: "."
-        target: "/opt/app"
+        source: "_site/"
+        target: "/srv/http/personal_website/htdocs/"
