--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,11 +28,10 @@ jobs:
         JEKYLL_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: Copy file via scp
       uses: appleboy/scp-action@master
-      env:
-        HOST: ${{ secrets.HOST }}
-        USERNAME: ${{ secrets.USERNAME }}
-        PORT: 22
-        KEY: ${{ secrets.KEY }}
       with:
+        host: ${{ secrets.HOST }}
+        username: ${{ secrets.USERNAME }}
+        port: 22
+        key: ${{ secrets.KEY }}
         source: "_site/"
         target: "/srv/http/personal_website/htdocs/"
