--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,5 +33,6 @@ jobs:
         username: ${{ secrets.USERNAME }}
         port: 22
         key: ${{ secrets.KEY }}
-        source: "_site/*"
-        target: "/srv/http/personal_website/htdocs/"
+        source: "_site"
+        target: "/srv/http/personal_website/htdocs"
+        strip_components: 1
