--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ author:
   twitter_username: martinusrihhi
   github_username:  MartinHinz
   academia_username:  MartinHinz
-  google_scholar_user: 39MXg1EAAAAJ
+  google_scholar_user: ucDs5SIAAAAJ
   humanities_commons_user: martinhinz
 
 exclude: ['_site', '_bibliography']
